8034775: Failing to initialize VM when running with negative value for -XX:CICompilerCount

Ensure appropriate min. number of compiler threads (1 for non-tiered, and 2 for tiered)

Reviewed-by: kvn